Another whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html,body
 	position: fixed;
 	top:0px;
 	left:0px;
-	width:100%;
+	width:100vw;
 	height:50px;
 	background-color: black;
 	border-bottom-style: solid;
